[package]
name = "wintile"
version = "0.1.0"
authors = ["Christopher Sarmiento <contact@csarmiento.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser","errhandlingapi"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
